# dev-journal

./: README.md  blog-post.md  pyproject.toml
.github/workflows/: ci.yml
src/dev_journal/: __init__.py  cli.py  config.py  formatter.py  storage.py
src/dev_journal/collectors/: __init__.py  file_collector.py  git_collector.py  shell_collector.py
src/dev_journal/generators/: __init__.py  blog.py  standup.py  weekly.py
tests/: conftest.py  test_cli.py  test_generators.py  test_git_collector.py  test_storage.py
